# auction-ms

./: .env.example  .gitignore  Cargo.toml  DEPLOYMENT_GUIDE.md  Dockerfile  build.rs  docker-compose.yml
docs/: DATE_HANDLING_GUIDE.md  react-mui-integration-example.jsx
migration/: Cargo.toml
migration/src/: lib.rs  m20250619_044136_create_auction_table.rs  m20250621_220711_create_bid_table.rs
proto/: auction.proto
src/: config.rs  db.rs  grpc_server.rs  lib.rs  main.rs
src/handlers/: auctions.rs
src/models/: auction.rs  bid.rs  mod.rs  prelude.rs
src/routes/: auctions.rs
tests/: auctions.rs
